# fq-compressor-rust

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_VITEPRESS.md  Dockerfile  QWEN.md  README.md  README.zh-CN.md  RELEASE_NOTES_DRAFT.md  RELEASE_zh.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  bacon.toml  cliff.toml  clippy.toml  deny.toml  package-lock.json  package.json  release.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: container-setup.sh
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  lsp.json
.github/instructions/: openspec.instructions.md
.github/workflows/: README.md  ci.yml  copilot-setup-steps.yml  docker.yml  docs-pages.yml  pages-vitepress.yml  pages.yml  quality.yml  release.yml
.omc/: project-memory.json
.trellis/: .template-hashes.json
.trellis/spec/cli/: index.md  (+4 more)
benches/: archive_workflow.rs  parser_throughput.rs
benches/support/: archive.rs  mod.rs  parser.rs
changelog/: 2026-03-10_workflow-deep-standardization.md  README.md
changelog/releases/: v0.1.0.md  v0.1.1.md
changelog/zh/: v0.1.0.md
docs/: MIGRATION.md  README.md  algorithms.md  architecture.md  development.md  format-spec.md  index.md  performance.md  release-notes.md
docs/.vitepress/: config.mts  config.ts  config.zh.ts
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/algorithms/: abc.md  index.md  minimizer.md  pe-optimization.md  scm.md  strategy-selection.md  zstd.md
docs/architecture/: block-format.md  data-flow.md  format-spec.md  index.md  modules.md  performance-roadmap.md  reorder-map.md
docs/benchmarks/: performance-report.md
docs/changelog/: index.md
docs/en/: README.md  algorithms.md  architecture.md  development.md  format-spec.md  performance.md
docs/gitbook/: GLOSSARY.md  book.json
docs/guide/: cli.md  installation.md  quick-start.md  what-is-fqc.md
docs/zh/: README.md  algorithms.md  architecture.md  development.md  format-spec.md  index.md  performance.md
openspec/: README.md
scripts/: release-v0.1.1.sh  setup-hooks.sh  validate.sh
specs/: README.md
specs/api/: README.md
specs/db/: README.md
specs/product/: README.md  cli-commands.md  core-compression.md  file-format.md
specs/rfc/: 0001-core-architecture.md  0002-compression-algorithms.md  0003-pipeline-architecture.md  README.md
specs/testing/: README.md
src/: archive_traits.rs  error.rs  format.rs  fqc_reader.rs  fqc_writer.rs  lib.rs  main.rs  reorder_map.rs  types.rs
src/algo/: abc.rs  aux_compressor.rs  block_compressor.rs  compressor_traits.rs  dna.rs  global_analyzer.rs  id_compressor.rs  id_compressor_impl.rs  mod.rs  pe_optimizer.rs  quality_compressor.rs  zstd_sequence.rs
src/commands/: compress.rs  decompress.rs  info.rs  mod.rs  verify.rs
src/common/: memory_budget.rs  mod.rs
src/fastq/: mod.rs  parser.rs
src/io/: async_io.rs  compressed_stream.rs  mod.rs
src/pipeline/: compression.rs  decompression.rs  mod.rs
tests/: test_algo.rs  test_benchmark_support.rs  test_dna.rs  test_e2e.rs  test_format.rs  test_parser.rs  test_reorder_map.rs  test_roundtrip.rs  test_types.rs
tests/data/: README.md  test_R1.fastq  test_R2.fastq  test_interleaved.fastq  test_se.fastq
(+80 files in other folders)
